# capstone

./: .env.example  .gitignore  ARCHITECTURE_AT_A_GLANCE.md  IMPLEMENTATION_PLAN.md  README.md  bridge_server.py  pyproject.toml
config/: allowlist_config.json  (+1 more)
github/capstone/text-to-sql-agent-main/: .env.example  .gitignore  ARCHITECTURE_AT_A_GLANCE.md  README.md  bridge_server.py  pyproject.toml
github/capstone/text-to-sql-agent-main/docs/: architecture-flow.mmd
github/capstone/text-to-sql-agent-main/src/: app.py  chat_store.py  orchestrator.py
github/capstone/text-to-sql-agent-main/src/agents/: anomaly.py  business_context.py  clarification.py  nlq_agent.py  query_router.py  rag_agent.py  sql_evaluator.py  sql_writer.py  synthesis.py  technical_spec.py
github/capstone/text-to-sql-agent-main/src/config/: allowlist_config.json  datasource_config.json  pii_config.json  schema_config.json
github/capstone/text-to-sql-agent-main/src/connectors/: azure_openai_connector.py  fabric_connector.py
github/capstone/text-to-sql-agent-main/src/guardrails/: input_guardrail.py  output_guardrail.py
github/capstone/text-to-sql-agent-main/src/models/: schemas.py
github/capstone/text-to-sql-agent-main/src/prompts/: __init__.py  clarification.md  nlq_agent.md  query_router.md  sql_evaluator.md  sql_writer.md  synthesis.md  technical_spec.md
github/capstone/text-to-sql-agent-main/tests/: test_anomaly.py  test_clarification.py  test_input_guardrail.py  test_output_guardrail.py  test_query_router.py  test_redact.py  test_schema_introspect.py  test_sql_validate.py
(+55 files in other folders)
